# saba

./: .gitignore  .goreleaser.yaml  .goreleaser_hook.sh  CLAUDE.md  Cargo.toml  README.md  build.sh  clerk.yml  go.mod  go.sum  install.sh  main.go  saba.sample.yml  saba.yml  system_config.yml  test_v2.yml
.design/: business_design.yml  diagram.drawio
.github/workflows/: release.yml  release.yml.BAK
datasources/settings/: bash.go  golang.go  javascript.go  python.go  rust.go  typescript.go  utils.go  v.go
di/: Cargo.toml  mod.go
di/src/: lib.rs
docs/v2.0-specification/: README.md  new_saba.yml
domain/: Cargo.toml  saba.yml
domain/model/: declare.go  declareCodeFile.go  declareSpec.go  declareUpstream.go  initialDeclare.go  tacitSetting.go
domain/repository/: declare.go  initialDeclare.go
domain/src/: lib.rs
file_path_store/: Cargo.toml
file_profile/: Cargo.toml  saba.yml
file_profile/src/: lib.rs
infrastructure/: Cargo.toml  saba.yml
infrastructure/datastore/: declare.go  initialDeclare.go
infrastructure/src/: lib.rs
lang/: saba.yml
lang/src/: lib.rs
manifest/: Cargo.toml  saba.yml
manifest/src/: lib.rs
presentation/: Cargo.toml  makeCmd.go  newCmd.go  saba.yml  subCmd.go  upCmd.go
presentation/command/handler/: app.go  newCmd.go  upCmd.go
presentation/src/: lib.rs
presentation/src/command/: new.rs  up.rs
scripts/: dot
src/: main.rs
src/claude_code_integration/: mod.rs
src/cli/: mod.rs
src/code_generation/: mod.rs
src/di/: container.rs
usecase/: Cargo.toml  declare.go  initialDeclare.go  saba.yml
usecase/src/: lib.rs
usecase/src/generate/codefile/bash/: mod.rs
usecase/src/generate/codefile/golang/: mod.rs  template.rs
usecase/src/generate/codefile/lua/: mod.rs
usecase/src/generate/codefile/python/: mod.rs  template.rs
usecase/src/generate/codefile/rust/: mod.rs  slim.rs  template.rs  tiny_project.rs  utils.rs
usecase/src/generate/codefile/typescript/: mod.rs  template.rs
usecase/src/manifest/: basic.rs  interface.rs
usecase/src/manifest/bash/: basic.rs
usecase/src/manifest/golang/: basic.rs  template.rs
usecase/src/manifest/lua/: basic.rs
usecase/src/manifest/python/: basic.rs  template.rs
usecase/src/manifest/rust/: basic.rs  template.rs
usecase/src/manifest/typescript/: basic.rs  template.rs
utils/: error.go
(+181 files in other folders)
