[package]
name = "saba"
version = "1.1.14"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "saba"
path = "src/main.rs"

[dependencies]
clap = "4.4.6"
yaml-rust = "0.4.5"
askama = "0.12.1"
lazy_static = "1.4.0"
getset = "0.1.2"
anyhow = "1.0.75"
inquire = "0.6.2"
regex = "1.10.2"