[package]
name = "saba"
version = "1.2.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "saba"
path = "src/main.rs"

[dependencies]
clap = "4.4.6"
anyhow = "1.0.79"
di = { path = "./di" }
sabacan = { git = "https://github.com/asweed888/sabacan.git", branch = "main" }
