[package]
name = "saba"
version = "1.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "saba"
path = "src/main.rs"

[dependencies]
clap = "4.4.6"
anyhow = "1.0.79"
askama = "0.12.1"
inquire = "0.6.2"
regex = "1.10.2"
yaml-rust = "0.4.5"