[package]
name = "di"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usecase = { path = "../usecase" }
presentation = { path = "../presentation" }
sabacan = { git = "https://github.com/asweed888/sabacan.git", branch = "main", version = "0.1.0" }
