[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
askama = "0.12.1"
anyhow = "1.0.79"
inquire = "0.6.2"
usecase = { path = "../usecase" }
sabacan = { git = "https://github.com/asweed888/sabacan.git", branch = "main" }
