[package]
name = "usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
askama = "0.12.1"
lazy_static = "1.4.0"
anyhow = "1.0.79"
regex = "1.10.2"
sabacan = { git = "https://github.com/asweed888/sabacan.git", branch = "main" }
